crates/observed_macros_impl/src/event/snapshots/observed_macros_impl__event__tests__event_with_lifetime.snap
---
source: crates/observed_macros_impl/src/event/tests.rs
expression: output
---
const _: () = {
    impl<'a> ::observed::Event for BorrowedEvent<'a> {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "borrowed.event",
            ::core::option::Option::Some(
                ::core::any::TypeId::of::<BorrowedEvent<'static>>(),
            ),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "borrowed.event",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "message",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("message"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|_| ::observed::Value::from(
                        ::std::sync::Arc::<str>::from(self.message),
                    ),
                )?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
