crates/observed_macros_impl/src/event/snapshots/observed_macros_impl__event__tests__event_with_type_parameter.snap
---
source: crates/observed_macros_impl/src/event/tests.rs
expression: output
---
const _: () = {
    impl<T: 'static> ::observed::Event for GenericEvent<T>
    where
        T: ::core::clone::Clone,
        ::observed::Value: ::core::convert::From<T>,
        T: ::core::marker::Send + ::core::marker::Sync,
    {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "generic.event",
            ::core::option::Option::Some(::core::any::TypeId::of::<GenericEvent<T>>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "generic.event",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "value",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("value"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.value.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
